--- a/react-ssr/tsconfig.json
+++ b/react-ssr/tsconfig.json
@@ -9,5 +9,8 @@
     "allowJs": true,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-  }
+  },
+  "includes": [
+    "./externals.d.ts"
+ ]
 }
