--- a/react-ssr/package.json
+++ b/react-ssr/package.json
@@ -6,21 +6,38 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config=webpack.prod.config.js",
-    "start": "webpack serve --config=webpack.dev.config.js"
+    "start": "webpack serve --config=webpack.dev.config.js",
+    "server": "npm run build && node ./server/index.js"
   },
   "author": "pulkit.cs@gmail.com",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "@babel/core": "^7.14.2",
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
     "@types/react": "^17.0.5",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
     "babel-loader": "^8.2.2",
-    "css-loader": "^5.2.4",
-    "eslint": "^7.26.0",
-    "express.js": "^1.0.0",
+    "css-loader": "^5.2.6",
+    "ejs": "^3.1.6",
+    "eslint": "^7.30.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-webpack-plugin": "^2.5.4",
+    "express": "^4.17.1",
     "html-webpack-plugin": "^5.3.1",
+    "less": "^4.1.1",
+    "less-loader": "^10.0.1",
     "mini-css-extract-plugin": "^1.6.0",
+    "prettier": "^2.3.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "style-loader": "^2.0.0",
     "ts-loader": "^9.1.2",
     "tslint": "^6.1.3",
@@ -28,10 +45,5 @@
     "webpack": "^5.37.0",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
-  },
-  "dependencies": {
-    "ejs": "^3.1.6",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
   }
 }
