--- a/socketio/package.json
+++ b/socketio/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npm run webpack:prod",
     "server": "webpack --config=webpack.dev.config.js && nodemon ./server/index.js",
-    "start:dev": "npm run webpack:dev && npm run server",
+    "start": "npm run webpack:dev && npm run server",
     "start:prod": "npm run webpack:prod && node ./server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack:dev": "webpack serve --config=webpack.dev.config.js",
@@ -21,13 +21,10 @@
     "socket.io-client": "^4.1.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.5",
-    "@babel/core": "^7.14.6",
-    "@babel/plugin-proposal-class-properties": "^7.14.5",
-    "@babel/preset-env": "^7.14.5",
-    "@babel/preset-es2015": "^7.0.0-beta.53",
-    "@babel/preset-react": "^7.14.5",
-    "babel-loader": "^8.2.2",
+    "@babel/core": "^7.18.9",
+    "@babel/preset-env": "^7.18.9",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^8.2.5",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.6.0",
     "nodemon": "^2.0.7",
