--- a/socketio/package.json
+++ b/socketio/package.json
@@ -5,20 +5,16 @@
   "main": "index.js",
   "scripts": {
     "build": "npm run webpack:prod",
-    "server": "webpack --config=webpack.dev.config.js && nodemon ./server/index.js",
-    "start": "npm run webpack:dev && npm run server",
-    "start:prod": "npm run webpack:prod && node ./server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack:dev": "webpack serve --config=webpack.dev.config.js",
-    "webpack:prod": "webpack --config=webpack.prod.config.js && npm run server"
+    "start:dev": "webpack serve --config=webpack.dev.config.js",
+    "start": "webpack --config=webpack.prod.config.js && node ./server/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "socket.io": "^4.1.2",
-    "socket.io-client": "^4.1.2"
+    "express": "^4.18.1",
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.9",
