--- a/bundling/package.json
+++ b/bundling/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "webpack serve --mode development --config webpack.dev.config.js"
+    "start:dev": "webpack serve --mode development --config webpack.dev.config.js",
+    "start": "webpack --mode production --config webpack.prod.config.js"
   },
   "dependencies": {
     "@babel/core": "^7.12.3",
